MAINTAINERCLEANFILES	= Makefile.in

# XXX recheck after rebase!
EXTRA_DIST		= \
			  watch_drbd

dist_sbin_SCRIPTS	= \
			  anvil-access-module \
			  anvil-boot-server \
			  anvil-change-password \
			  anvil-check-memory \
			  anvil-configure-host \
			  anvil-cycle-vm-nics \
			  anvil-daemon \
			  anvil-delete-server \
			  anvil-download-file \
			  anvil-file-details \
			  anvil-get-server-screenshot \
			  anvil-join-anvil \
			  anvil-maintenance-mode \
			  anvil-manage-alerts \
			  anvil-manage-dr \
			  anvil-manage-files \
			  anvil-manage-firewall \
			  anvil-manage-host \
			  anvil-manage-keys \
			  anvil-manage-power \
			  anvil-manage-server \
			  anvil-manage-server-storage \
			  anvil-manage-storage-groups \
			  anvil-migrate-server \
			  anvil-network-profiler \
			  anvil-parse-fence-agents \
			  anvil-provision-server \
			  anvil-rename-server \
			  anvil-report-usage \
			  anvil-safe-start \
			  anvil-safe-stop \
			  anvil-scan-network \
			  anvil-show-local-ips \
			  anvil-shutdown-server \
			  anvil-sync-shared \
			  anvil-test-alerts \
			  anvil-update-definition \
			  anvil-update-issue \
			  anvil-update-states \
			  anvil-update-system \
			  anvil-version-changes \
			  anvil-watch-bonds \
			  scancore \
			  striker-auto-initialize-all \
			  striker-boot-machine \
			  striker-db-report \
			  striker-db-status \
			  striker-file-manager \
			  striker-get-peer-data \
			  striker-initialize-host \
			  striker-manage-install-target \
			  striker-manage-peers \
			  striker-manage-vnc-pipes \
			  striker-open-ssh-tunnel \
			  striker-parse-os-list \
			  striker-parse-oui \
			  striker-prep-database \
			  striker-purge-target \
			  striker-scan-network \
			  striker-show-db-counts 
			  
fencedir		= ${FASEXECPREFIX}/sbin

dist_fence_SCRIPTS	= \
			  fence_delay \
			  fence_pacemaker \
			  unfence_pacemaker

sharedir		= ${datarootdir}/anvil

dist_share_DATA		= striker-auto-initialize-all.example

