MAINTAINERCLEANFILES	= Makefile.in

dist_sbin_SCRIPTS	= \
			  anvil-access-module \
			  anvil-boot-server \
			  anvil-change-password \
			  anvil-check-memory \
			  anvil-configure-host \
			  anvil-cycle-vm-nics \
			  anvil-daemon \
			  anvil-delete-server \
			  anvil-download-file \
			  anvil-file-details \
			  anvil-join-anvil \
			  anvil-maintenance-mode \
			  anvil-manage-alerts \
			  anvil-manage-daemons \
			  anvil-manage-dr \
			  anvil-manage-files \
			  anvil-manage-firewall \
			  anvil-manage-host \
			  anvil-manage-keys \
			  anvil-manage-power \
			  anvil-manage-server \
			  anvil-manage-storage-groups \
			  anvil-manage-server-network \
			  anvil-manage-server-storage \
			  anvil-manage-server-system \
			  anvil-manage-vnc-pipe \
			  anvil-migrate-server \
			  anvil-monitor-network \
			  anvil-monitor-performance \
			  anvil-network-profiler \
			  anvil-parse-fence-agents \
			  anvil-pcs-wrapper \
			  anvil-provision-server \
			  anvil-rename-server \
			  anvil-report-usage \
			  anvil-safe-start \
			  anvil-safe-stop \
			  anvil-show-local-ips \
			  anvil-shutdown-server \
			  anvil-special-operations \
			  anvil-sync-shared \
			  anvil-update-issue \
			  anvil-update-system \
			  anvil-version-changes \
			  anvil-virsh-wrapper \
			  anvil-watch-bonds \
			  anvil-watch-drbd \
			  anvil-watch-power \
			  anvil-watch-servers \
			  scancore \
			  striker-auto-initialize-all \
			  striker-boot-machine \
			  striker-check-machines \
			  striker-collect-debug \
			  striker-db-status \
			  striker-file-manager \
			  striker-get-peer-data \
			  striker-get-screenshots \
			  striker-initialize-host \
			  striker-manage-install-target \
			  striker-manage-peers \
			  striker-parse-oui \
			  striker-purge-target \
			  striker-scan-network \
			  striker-show-db-counts \
			  striker-show-jobs \
			  striker-update-cluster

fencedir		= ${FASEXECPREFIX}/sbin

dist_fence_SCRIPTS	= \
			  fence_delay \
			  fence_pacemaker \
			  unfence_pacemaker

sharedir		= ${datarootdir}/anvil

dist_share_DATA		= striker-auto-initialize-all.example

