MAINTAINERCLEANFILES	= Makefile.in

servicedir		= $(SYSTEMD_UNIT_DIR)
dist_service_DATA	= \
			  anvil-daemon.service \
			  anvil-monitor-daemons.service \
			  anvil-monitor-drbd.service \
			  anvil-monitor-lvm.service \
			  anvil-monitor-network.service \
			  anvil-monitor-performance.service \
			  anvil-monitor-server.service \
			  anvil-safe-start.service \
			  scancore.service \
			  striker-ui-api.service
